# TaskScheduler

./: CMakeLists.txt  README.md  main.cpp  test.cpp
.github/workflows/: main.yml
headers/: Display.hpp  List.hpp  ListDisplay.hpp  Menu.hpp  Remove.hpp  Scheduler.hpp  Task.hpp  TaskDisplay.hpp
src/: Display.cpp  List.cpp  Menu.cpp  Remove.cpp  Scheduler.cpp  Task.cpp
tests/: display_test.hpp  test.cpp
